@@ -1087,6 +1087,7 @@ t/data/repos1/st/batches/25715.xml
 t/data/repos1/st/samples/1327533.xml
 t/data/repos1/st/samples/1327535.xml
 t/data/repos1/st/samples/1382839.xml
+t/data/repos1/st/samples/1327539.xml
 t/data/repos1/st/samples/1807468.xml
 t/data/repos1/st/samples/1830658.xml
 t/data/repos1/st/studies/2072.xml
