@@ -1,0 +1,234 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<sample api_version="0.6">
+  <id>1327535</id>
+  <name>DYSLIPFAM5268484</name>
+  <study_id>2072</study_id>
+  <consent_withdrawn>false</consent_withdrawn>
+  <properties>
+    <property>
+      <name>Organism</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Cohort</name>
+      <value>EUFAM</value>
+    </property>
+    <property>
+      <name>Country of origin</name>
+      <value>FINLAND</value>
+    </property>
+    <property>
+      <name>Geographical region</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Ethnicity</name>
+      <value>Finnish</value>
+    </property>
+    <property>
+      <name>Volume (&#181;l)</name>
+      <value>100</value>
+    </property>
+    <property>
+      <name>Plate</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Mother</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Father</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Replicate</name>
+      <value></value>
+    </property>
+    <property>
+      <name>GC content</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Gender</name>
+      <value>Female</value>
+    </property>
+    <property>
+      <name>Donor Id</name>
+      <value></value>
+    </property>
+    <property>
+      <name>DNA source</name>
+      <value>Blood</value>
+    </property>
+    <property>
+      <name>Public Name</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Common Name</name>
+      <value>Homo Sapien</value>
+    </property>
+    <property>
+      <name>Strain</name>
+      <value></value>
+    </property>
+    <property>
+      <name>TAXON ID</name>
+      <value>9606</value>
+    </property>
+    <property>
+      <name>ENA Sample Accession Number</name>
+      <value>EGAN00001036630</value>
+    </property>
+    <property>
+      <name>Sample Description</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Sample Visibility</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Sibling</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Is re-submitted?</name>
+      <value>false</value>
+    </property>
+    <property>
+      <name>Date of sample collection</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Date of sample extraction</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Sample extraction method</name>
+      <value>5</value>
+    </property>
+    <property>
+      <name>Sample purified</name>
+      <value>N</value>
+    </property>
+    <property>
+      <name>Purification method</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Concentration</name>
+      <value>137</value>
+    </property>
+    <property>
+      <name>Concentration determind by</name>
+      <value>Picogreen</value>
+    </property>
+    <property>
+      <name>Sample type</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Sample storage conditions</name>
+      <value>-20C</value>
+    </property>
+    <property>
+      <name>Genotype</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Phenotype</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Age</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Developmental Stage</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Cell Type</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Disease State</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Compound</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Dose</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Immunoprecipitate</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Growth Condition</name>
+      <value></value>
+    </property>
+    <property>
+      <name>RNAi</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Organism Part</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Time Point</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Treatment</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Subject</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Disease</name>
+      <value></value>
+    </property>
+    <property>
+      <name>Reference Genome</name>
+      <value>Not suitable for alignment</value>
+    </property>
+  </properties>
+  <assets>
+    <asset id="4190287" href="/assets/4190287"/>
+    <asset id="4190544" href="/assets/4190544"/>
+    <asset id="4190641" href="/assets/4190641"/>
+    <asset id="4190738" href="/assets/4190738"/>
+    <asset id="4191596" href="/assets/4191596"/>
+    <asset id="4191763" href="/assets/4191763"/>
+    <asset id="4192287" href="/assets/4192287"/>
+    <asset id="4197173" href="/assets/4197173"/>
+    <asset id="4197270" href="/assets/4197270"/>
+    <asset id="4342715" href="/assets/4342715"/>
+    <asset id="4445262" href="/assets/4445262"/>
+    <asset id="4451570" href="/assets/4451570"/>
+    <asset id="4451667" href="/assets/4451667"/>
+    <asset id="4456506" href="/assets/4456506"/>
+    <asset id="4460891" href="/assets/4460891"/>
+    <asset id="4469520" href="/assets/4469520"/>
+    <asset id="4469619" href="/assets/4469619"/>
+    <asset id="4502642" href="/assets/4502642"/>
+    <asset id="4505240" href="/assets/4505240"/>
+    <asset id="4505880" href="/assets/4505880"/>
+    <asset id="4510459" href="/assets/4510459"/>
+    <asset id="4442539" href="/assets/4442539"/>
+    <asset id="4577657" href="/assets/4577657"/>
+    <asset id="4608593" href="/assets/4608593"/>
+    <asset id="4650155" href="/assets/4650155"/>
+    <asset id="4754640" href="/assets/4754640"/>
+  </assets>
+  <study_id>2072</study_id>
+</sample>
